tests/baselines/reference/sourceMapForFunctionInInternalModuleWithCommentPrecedingStatement01.errors.txt
sourceMapForFunctionInInternalModuleWithCommentPrecedingStatement01.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== sourceMapForFunctionInInternalModuleWithCommentPrecedingStatement01.ts (1 errors) ====
    module Q {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        function P() {
            // Test this
            var a = 1;
        }
    }